--- a/baltos/image/genimage-barebox-baltos.cfg
+++ b/baltos/image/genimage-barebox-baltos.cfg
@@ -7,7 +7,8 @@ image boot.vfat {
       image = "barebox-am33xx-baltos.img"
     }
     files = {
-      "openwrt-baltos-squashfs.img"
+      "openwrt-baltos-squashfs.img",
+      "uEnv.txt"
     }
   }
   size = 32M
