--- a/baltos/Makefile
+++ b/baltos/Makefile
@@ -12,8 +12,9 @@ BOARDNAME:=VScom Baltos iR
 FEATURES:=usb targz ext4 nand ubifs 
 
 #LINUX_VERSION:=3.18.21
-LINUX_VERSION:=3.18.48
-#LINUX_VERSION:=4.1.38
+#LINUX_VERSION:=3.18.131
+#LINUX_VERSION:=4.14.91
+KERNEL_PATCHVER:=4.14
 
 CFLAGS:=-Os -pipe -march=armv4t -mfloat-abi=softfp
 MAINTAINER:=VScom <contact@vscom.de>
