--- a/baltos/image/Makefile
+++ b/baltos/image/Makefile
@@ -9,13 +9,25 @@ include $(INCLUDE_DIR)/image.mk
 
 define Image/Prepare
 	cp $(LINUX_DIR)/arch/arm/boot/zImage $(KDIR)/zImage
-	cp $(LINUX_DIR)/arch/arm/boot/dts/onrisc-baltos-*.dtb $(BIN_DIR)/
+	cp $(KDIR)/zImage $(BIN_DIR)/openwrt-$(BOARD)-zImage
+	cp $(LINUX_DIR)/arch/arm/boot/dts/am335x-baltos-*.dtb $(BIN_DIR)/
 	cp $(PLATFORM_DIR)/image/kernel-fit-intree.its $(BIN_DIR)/
 	cp $(PLATFORM_DIR)/image/barebox-am33xx-baltos.img $(BIN_DIR)/
 	cp $(PLATFORM_DIR)/image/barebox-am33xx-baltos-mlo.img $(BIN_DIR)/
 	cp $(PLATFORM_DIR)/image/genimage-barebox-baltos.cfg $(BIN_DIR)/
 	cp $(PLATFORM_DIR)/image/uEnv.txt $(BIN_DIR)/
 	cp $(PLATFORM_DIR)/image/mksdcard.sh $(BIN_DIR)/
+
+	$(INSTALL_DIR) $(TARGET_DIR)/boot
+	cp $(LINUX_DIR)/arch/arm/boot/dts/am335x-baltos-*.dtb $(TARGET_DIR)/boot/
+	$(CP) $(BIN_DIR)/openwrt-$(BOARD)-zImage $(TARGET_DIR)/boot/
+	ln -sf openwrt-$(BOARD)-zImage $(TARGET_DIR)/boot/zImage
+	ln -sf am335x-baltos-ir2110.dtb $(TARGET_DIR)/boot/onrisc-baltos-ir-2110.dtb
+	ln -sf am335x-baltos-ir3220.dtb $(TARGET_DIR)/boot/onrisc-baltos-ir-3220.dtb
+	ln -sf am335x-baltos-ir5221.dtb $(TARGET_DIR)/boot/onrisc-baltos-ir-5221.dtb
+
+	ln -sf  busybox $(TARGET_DIR)/bin/adduser
+	ln -sf  /bin/busybox $(TARGET_DIR)/usr/bin/passwd
 endef
 
 define Image/BuildKernel
