use Cortex-A8 w/ VFPv3

--- a/baltos/Makefile
+++ b/baltos/Makefile
@@ -10,13 +10,15 @@ ARCH:=arm
 BOARD:=baltos
 BOARDNAME:=VScom Baltos iR
 FEATURES:=usb targz ext4 nand ubifs 
+CPU_TYPE:=cortex-a8
+CPU_SUBTYPE:=vfpv3
 
 #LINUX_VERSION:=3.18.21
 #LINUX_VERSION:=3.18.131
 #LINUX_VERSION:=4.14.91
 KERNEL_PATCHVER:=4.14
 
-CFLAGS:=-Os -pipe -march=armv4t -mfloat-abi=softfp
+CFLAGS:=-Os -pipe
 MAINTAINER:=VScom <contact@vscom.de>
 
 #KERNELNAME:=zImage onrisc-baltos-ir-5221.dtb onrisc-baltos-ir-3220.dtb onrisc-baltos-ir-2110.dtb onrisc-baltos-dio-1080.dtb netcan.dtb netcom-plus-omap-uarts.dtb
