Prepare target for 21.02

--- a/baltos/Makefile
+++ b/baltos/Makefile
@@ -9,14 +9,15 @@ include $(TOPDIR)/rules.mk
 ARCH:=arm
 BOARD:=baltos
 BOARDNAME:=VScom Baltos iR
-FEATURES:=usb targz ext4 nand fpu ubifs
+FEATURES:=usb usbgadget targz ext4 nand fpu ubifs
 CPU_TYPE:=cortex-a8
 CPU_SUBTYPE:=vfpv3
 
 #LINUX_VERSION:=3.18.21
 #LINUX_VERSION:=3.18.131
 #LINUX_VERSION:=4.14.91
-KERNEL_PATCHVER:=4.14
+#KERNEL_PATCHVER:=4.14
+KERNEL_PATCHVER:=5.4
 
 CFLAGS:=-Os -pipe
 MAINTAINER:=VScom <contact@vscom.de>
