--- a/baltos/image/genimage-barebox-baltos.cfg
+++ b/baltos/image/genimage-barebox-baltos.cfg
@@ -8,7 +8,8 @@ image boot.vfat {
     }
     files = {
       "openwrt-baltos-squashfs.img",
-      "uEnv.txt"
+      "uEnv.txt",
+      "uImage"
     }
   }
   size = 32M
